--- a/docs/report.tex
+++ b/docs/report.tex
@@ -93,8 +93,8 @@ che permette di scrivere codice in Kotlin e di compilarlo per diverse piattaform
 \section{Lavoro svolto}\label{sec:lavoro-svolto}
 
 Per prima cosa è servito capire quali fossero effettivamente i costrutti necessari da inserire all'interno del DSL di \ck{}.
-
-
+%
+Tra i vari
 
 
 \label{sec:contribution}
