complete future works

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -100,7 +100,7 @@ Nella \Cref{fig:timeline} è mostrata la timeline indicativa del progetto, con i
 %
 Al momento ci troviamo tra M3 e M4, in corrispondenza della linea arancione.
 %
-Di seguito illustrerò i task svolti fino ad ora.
+Di seguito verranno illustrati i task svolti fino ad ora.
 
 \begin{figure}
     \centering
@@ -189,7 +189,7 @@ Implementando l'algoritmo con \ck{}, è stato possibile identificare le funziona
     un linguaggio di programmazione per sistemi auto-organizzanti basato su \ac{FC},
 
 Dal lavoro ottenuto con lo sviluppo dell'algoritmo,
-    è stato possibile sottoportare un paper alla conferenza ``\emph{Autonomic Computing and Self-Organizing Systems}'' (ACSOS) 2024,
+    è stato possibile sottoportare un articolo alla conferenza ``\emph{Autonomic Computing and Self-Organizing Systems}'' (ACSOS) 2024,
     intitolato ``\emph{An Aggregate Vascular Morphogenesis Controller for Engineered Self-Organising Spatial Structures}'',
     che propone un modello alternativo al \ac{vmc} proposto in letteratura,
     sviluppato con \ck{}.
@@ -228,7 +228,27 @@ Al momento non sono ancora presenti i test per Android, che verranno sviluppati 
 %allineamento debug-friendly
 %investigare integrazione con pulverization
 
+Come obiettivi per i prossimi tre mesi di lavoro, ovvero nella \Cref{fig:timeline} tra M6 e M7,
+    si prevede di completare il task T1, ovvero la progettazione del \ac{dsl},
+    ed il task T3, ovvero il targeting multiplatform,
+    aspirando all'effettivo testing del \ac{dsl} su Android e piattaforme iOS fisiche.
 
+Gli sviluppi della standard library verranno portati avanti, con l'obiettivo di implementare funzionalità più complesse.
+
+Inoltre, si prevede di implementare un meccanismo di allineamento più debug-friendly,
+    per permettere una migliore comprensione del comportamento dei dispositivi durante l'esecuzione del programma.
+
+Come attuale lavoro in svolgimento c'è anche la stesura di un altro articolo, che verrà presentato alla conferenza
+    ``\emph{Distributed Simulation in the Space Domain}'' (DS-RT) 2024,
+    per il quale verranno sviluppate simulazioni di programmi implementati con \ck{} in un ambiente di simulazione distribuito.
+
+Infine, non si esclude la possibilità di una collaborazione all'interno del gruppo di ricerca UniBo con colleghi che stanno sviluppando
+    ricerche sull'approccio ``polverizzazione'':
+    un approccio utilizzato per progettare il comportamento adattivo distribuito per sistemi cibernetici-fisici (CPS) su larga scala,
+    suddividendo il comportamento complessivo del sistema in piccoli pezzi di calcolo gestibili strettamente legati a sensori, attuatori e componenti vicini.
+%
+Questa collaborazione potrebbe portare a una posticipazione dei task inerenti alle demo, ma permetterebbe di sviluppare
+    un approccio più generale e flessibile per la programmazione di dispositivi eterogenei nell'edge-cloud continuum.
 
 %%%%%%%%%%%%%%%%%%%%end%%%%%%%%%%%%%%%%%%%%
 
