add task on future works

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -234,7 +234,8 @@ Come obiettivi per i prossimi tre mesi di lavoro, ovvero nella \Cref{fig:timelin
     ed il task T3, ovvero il targeting multiplatform,
     aspirando all'effettivo testing del \ac{dsl} su Android e piattaforme iOS fisiche.
 
-Gli sviluppi della standard library verranno portati avanti, con l'obiettivo di implementare funzionalità più complesse.
+Gli sviluppi dell'integrazione con l'ambiente di simulazione (task T4) e della standard library (task T2) verranno portati
+    avanti, con l'obiettivo di implementare funzionalità più complesse.
 
 Inoltre, si prevede di implementare un meccanismo di allineamento più debug-friendly,
     per permettere una migliore comprensione del comportamento dei dispositivi durante l'esecuzione del programma.
