fix section title

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -51,6 +51,10 @@
    Borsista: \\Angela Cortecchia \\ \small angela.cortecchia@unibo.it
     \and
     Tutor accademico: \\Danilo Pianini \\ \small danilo.pianini@unibo.it
+    \and
+    Referee CTS GARR: \\Claudio Grandi \\ \small claudio.grandi@bo.infn.it
+    \and
+    Referee GARR: \\Francesco Lombardi \\ \small francesco.lombardi@garr.it
 }
 
 %\date{\small Academic year}
@@ -62,7 +66,7 @@
 
 %%%%%%%%%%%%%%%%%%%%body%%%%%%%%%%%%%%%%%%%%
 
-\section{Recap del contesto}
+\section{Contesto}
 \label{sec:context}
 In un contesto in cui sono sempre in maggior numero i dispositivi dotati di capacità computazionali,
     che presentano la necessità di un'organizzazione e di un coordinamento tra loro,
