--- a/docs/report.tex
+++ b/docs/report.tex
@@ -1,4 +1,4 @@
-\documentclass[13pt, a4paper]{article}
+\documentclass[13pt, a4paper]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage{fontenc}
 \usepackage{xcolor}
